# FootballManager

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
FM/: CMakeLists.txt  Contract.h  DateUtils.cpp  Defender.cpp  DomainEventPublisher.h  EventQueue.cpp  FM.sln  FixtureGenerator.h  FootballerFactory.h  Formation.h  HeadCoach.h  LeagueContext.h  LeagueRules.h  MatchScheduler.h  Midfielder.cpp  Midfielder.h  PlayerConditionService.h  PlayerPosition.cpp  PlayerPosition.h  PostMatchInteraction.cpp  PreMatchInteraction.cpp  PreMatchInteraction.h  RejectTransferOfferCommand.h  SeasonPlan.cpp  SeasonPlan.h  TeamSelectionService.cpp  TransferOffer.h  World.cpp
FM/FM/: CMakeLists.txt  Contract.cpp  Contract.h  Date.cpp  Date.h  DateUtils.cpp  DateUtils.h  Defender.cpp  Defender.h  DomainEventPublisher.cpp  DomainEventPublisher.h  EventQueue.cpp  EventQueue.h  FM.vcxproj  FM.vcxproj.filters  FixtureGenerator.cpp  FixtureGenerator.h  Footballer.cpp  Footballer.h  FootballerFactory.cpp  Formation.cpp  Formation.h  FormationSlotRole.h  Forward.cpp  Forward.h  Game.cpp  Game.h  GameEvents.h  GameInteraction.cpp  GameInteraction.h  Goalkeeper.cpp  Goalkeeper.h  HeadCoach.cpp  InteractionManager.cpp  InteractionManager.h  League.cpp  League.h  LeagueContext.cpp  LeagueContext.h  LeagueProjection.cpp  (+55 more)
FM/apps/: match_engine_smoke.cpp  sqlite_bootstrap_smoke.cpp
FM/apps/fm_runner/: main.cpp
FM/database/: schema.sql  seed.sql  superlig_dev.db
FM/include/: Contract.h  Defender.h  FixtureGenerator.h  Game.h  HeadCoach.h  League.h  LeagueContext.h  MatchReport.h  MatchScheduler.h  MatchSimulation.h  PlayMatchCommand.h  PlayMatchCommandHandler.h  PlayerTransferredEvent.h  PostMatchInteraction.h  PreMatchInteraction.h  SeasonPlan.h  Team.h  TeamSheet.h  TransferOffer.h  TransferOfferCreatedEvent.h  TransferOfferDecisionInteraction.h  TransferOfferService.h  TransferRoom.h  Types.h  World.h
FM/include/fm/common/: DateUtils.h
FM/include/fm/competition/: FixtureGenerator.h  League.h  LeagueRules.h  SeasonPlan.h
FM/include/fm/core/: Game.h  GameBootstrapOptions.h  SaveScheduler.h  User.h  World.h
FM/include/fm/data/: BootstrapDtos.h  RuntimeSaveValidator.h  SaveMetadata.h  SavePolicy.h  SqliteBootstrapDatabaseInitializer.h  SqliteBootstrapRepository.h  SqliteDatabase.h  SqliteGameStateRepository.h  SqliteLeagueRulesRepository.h  SqliteSaveMetadataRepository.h  WorldBootstrapLoader.h  WorldBootstrapService.h
FM/include/fm/events/: DomainEventPublisher.h  MatchPlayedEvent.h  PlayerTransferredEvent.h  TransferOfferCreatedEvent.h  TransferOfferResolvedEvent.h
FM/src/: Contract.cpp  Date.cpp  DateUtils.cpp  DomainEventPublisher.cpp  FixtureGenerator.cpp  Game.cpp  Goalkeeper.cpp  League.cpp  LeagueRules.cpp  MatchScheduler.cpp  MatchSimulation.cpp  PlayMatchCommandHandler.cpp  PlayerConditionService.cpp  PlayerRoleFit.cpp  RosterLoader.cpp  SeasonPlan.cpp  Team.cpp  TeamSelectionService.cpp  TeamSheet.cpp  TransferOfferService.cpp  TransferRoom.cpp  User.cpp  World.cpp  main.cpp
FM/src/common/: Date.cpp
FM/src/competition/: FixtureGenerator.cpp  League.cpp  LeagueRules.cpp  MatchScheduler.cpp  SeasonPlan.cpp
FM/src/core/: Game.cpp  LeagueContext.cpp  SaveScheduler.cpp  User.cpp  World.cpp
FM/src/data/: RosterLoader.cpp  RuntimeSaveValidator.cpp  SavePolicy.cpp  SqliteBootstrapDatabaseInitializer.cpp  SqliteBootstrapRepository.cpp  SqliteDatabase.cpp  SqliteGameStateRepository.cpp  SqliteLeagueRulesRepository.cpp  SqliteSaveMetadataRepository.cpp  WorldBootstrapLoader.cpp  WorldBootstrapService.cpp
FM/src/events/: DomainEventPublisher.cpp
FM/src/finance/: TeamFinance.cpp
FM/src/interaction/: GameInteraction.cpp  InteractionManager.cpp  PostMatchInteraction.cpp  PreMatchInteraction.cpp  TransferOfferDecisionInteraction.cpp
FM/src/match/: EditableLineup.cpp  EventQueue.cpp  MatchSimulation.cpp  PlayMatchCommandHandler.cpp  PlayerConditionService.cpp  PlayerConditionState.cpp  TeamSelectionService.cpp  TeamSheet.cpp  TeamSheetEvaluationService.cpp
FM/src/match_engine/: ActionCandidateGenerator.cpp  ActionPlan.cpp  ActionSelector.cpp  BallTrajectoryBuilder.cpp  ContestResolver.cpp  CoordinateMatchSimulator.cpp  CoordinateSimulationPrototype.cpp  DefensiveResponsibility.cpp  DeterministicRandom.h  FastMatchSummarySimulator.cpp  InterceptionResolver.cpp  MatchEngine.cpp  MatchEngineInputBuilder.cpp  MatchEngineReportAdapter.cpp  MovementResolver.cpp  PitchGeometry.cpp  PlayerIntentResolver.cpp  ShotQualityModel.cpp  TacticalZone.cpp  TeamShapeModel.cpp
FM/src/presentation/: MatchPresentationBuilder.cpp  TeamPresentationBuilder.cpp  TeamSheetPresentationBuilder.cpp
FM/src/roster/: Contract.cpp  Defender.cpp  Footballer.cpp  FootballerFactory.cpp  Formation.cpp  FormationPitchLayout.cpp  Forward.cpp  Goalkeeper.cpp  HeadCoach.cpp  Midfielder.cpp  PlayerAttributes.cpp  PlayerOverallCalculator.cpp  PlayerPosition.cpp  PlayerPositionBucket.cpp  PlayerRoleFit.cpp  Team.cpp
FM/src/transfer/: TransferOffer.cpp  TransferOfferService.cpp  TransferRoom.cpp
FM_UI/: AppIcon.qml  BootstrapPaths.cpp  BootstrapPaths.h  CMakeLists.txt  ConditionBadge.qml  DashboardNextMatchObject.cpp  DashboardNextMatchObject.h  DashboardStandingsRowObject.cpp  DashboardStandingsRowObject.h  DashboardStateObject.cpp  DashboardStateObject.h  DashboardTeamStatsObject.cpp  DashboardTeamStatsObject.h  DashboardUpcomingMatchesModel.cpp  DashboardUpcomingMatchesModel.h  DashboardView.qml  EditableLineupRosterModel.cpp  EditableLineupRosterModel.h  EditableLineupSlotsModel.cpp  EditableLineupSlotsModel.h  EditableLineupStateObject.cpp  EditableLineupStateObject.h  FootballPitchSurface.qml  GameFacade.cpp  GameFacade.h  GameFacadeSmoke.cpp  HomeView.qml  InteractionModalShell.qml  InteractionStateObject.cpp  InteractionStateObject.h  LineupEditorScreen.qml  LineupEditorView.qml  LineupPitchPanel.qml  LineupPlayerToken.qml  LineupRosterPanel.qml  LineupRosterRow.qml  LineupSlotCard.qml  LineupSlotRow.qml  LineupStartingXIRow.qml  LineupStartingXISection.qml  (+47 more)
(+182 files in other folders)
